--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -66,7 +66,9 @@ $blue-hover: #0b1658;
 $blue-dark-text: #1b0e41;
 $pink-active: #d82f94;
 $pink-hover: #eb0299;
-$emphasis: #f71963;
+$emphasis: #d82f94;
+//$emphasis: #f71963;
+
 $light: #f4f7fa;
 
-$font-family-text: 'Roboto', sans-serif;
+$font-family-text: 'AnekTamil', 'Roboto', sans-serif;
