--- a/sass/footer/vtex.store-newsletter.scss
+++ b/sass/footer/vtex.store-newsletter.scss
@@ -19,6 +19,7 @@
       background-color: transparent !important;
       width: 0px;
       position: relative;
+      border-color: #291660 !important;
       &:hover {
         background-color: transparent !important;
       }
