--- a/sass/header/vtex.store-components.scss
+++ b/sass/header/vtex.store-components.scss
@@ -32,9 +32,9 @@
       position: absolute;
       padding: 0;
       top: 10px;
-      right:10px;
+      right: 10px;
       &::before {
-        content: "";
+        content: '';
         width: 1.2rem;
         height: 1.2rem;
         display: inline-block;
@@ -52,12 +52,23 @@
     }
   }
 }
-@media screen and (min-width: 1312px) {
-  .searchBarInnerContainer--desktop-searchbar{
-    width: 720px;
+@media screen and (max-width: 1023px) {
+  :global(.vtex-search-2-x-close-btn) {
+    z-index: 110 !important;
+    color: $pink-active;
+  }
+  :global(.vtex-search-2-x-image) {
+    width: 70px;
+    height: 70px;
+    object-fit: contain;
   }
 }
 
+@media screen and (min-width: 1312px) {
+  .searchBarInnerContainer--desktop-searchbar {
+    width: 720px;
+  }
+}
 
 .imageElementLink--menu-category-item {
   .imageElement--menu-category-item {
@@ -75,7 +86,6 @@
 }
 
 .autoCompleteOuterContainer--mobile-searchbar {
-
   :global(.vtex-input__suffix) {
     padding: 5px;
   }
@@ -83,12 +93,13 @@
     position: relative;
     padding: 0;
     &::before {
-      content: "";
+      padding-right: 5px;
+      content: '';
       width: 1.4rem;
       height: 1.4rem;
       display: inline-block;
       background-repeat: no-repeat;
-      background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0h40v40H0z'/%3E%3Cg transform='translate(10 10)' stroke='%235D5D5D'%3E%3Cellipse cx='8.02848517' cy='8.01835004' rx='7.52848517' ry='7.51835004'/%3E%3Cpath stroke-linecap='round' d='m13.5480687 13.5309657 5.0178033 5.0113029'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0h40v40H0z'/%3E%3Cg transform='translate(10 10)' stroke='%236B4DC4'%3E%3Cellipse cx='8.02848517' cy='8.01835004' rx='7.52848517' ry='7.51835004'/%3E%3Cpath stroke-linecap='round' d='m13.5480687 13.5309657 5.0178033 5.0113029'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
       background-size: 2.4rem;
       background-position: -8px -7px;
     }
@@ -102,7 +113,35 @@
 }
 
 .searchBarContainer {
-  @include mobile {
-    padding-block: 10px;
+  padding-block: 10px;
+
+  :global(.vtex-styleguide-9-x-hideDecorators) {
+    z-index: 6;
+    @media screen and (max-width: 1023px) {
+      border: none !important;
+      border-radius: 40px 0 0 40px !important;
+      //color: transparent !important;
+    }
+  }
+}
+
+.imageElement--header-logo-new {
+  width: 11rem;
+  //padding-left: 10px;
+  padding-right: 2.2rem;
+  padding-top: 3px;
+  max-width: none !important;
+  transform: translateX(-0.7em);
+
+  @media (max-width: 380px) {
+    width: 10rem;
+    padding-right: 0;
+    transform: translateX(0);
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+    width: 16rem;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
