--- a/styles/configs/font-faces.css
+++ b/styles/configs/font-faces.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Roboto';
     src: url('assets/fonts/Roboto-Thin.ttf') format('truetype'),
     url('assets/fonts/Roboto-Thin.ttf') format('truetype');
@@ -44,4 +44,52 @@
     url('assets/fonts/Roboto-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
+} */
+
+@font-face {
+  font-family: 'AnekTamil';
+  src: url('assets/fonts/AnekTamil-Thin.ttf') format('truetype'),
+    url('assets/fonts/AnekTamil-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'AnekTamil';
+  src: url('assets/fonts/AnekTamil-Light.ttf') format('truetype'),
+    url('assets/fonts/AnekTamil-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'AnekTamil';
+  src: url('assets/fonts/AnekTamil-Regular.ttf') format('truetype'),
+    url('assets/fonts/AnekTamil-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'AnekTamil';
+  src: url('assets/fonts/AnekTamil-Medium.ttf') format('truetype'),
+    url('assets/fonts/AnekTamil-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'AnekTamil';
+  src: url('assets/fonts/AnekTamil-Bold.ttf') format('truetype'),
+    url('assets/fonts/AnekTamil-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'AnekTamil';
+  src: url('assets/fonts/AnekTamil-ExtraBold.ttf') format('truetype'),
+    url('assets/fonts/AnekTamil-ExtraBold.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
 }
