--- a/sass/atomic/atoms/_search-bar.scss
+++ b/sass/atomic/atoms/_search-bar.scss
@@ -8,7 +8,6 @@
       position: relative;
       z-index: 9999;
       .searchBarInnerContainer {
-
         &--searchInputDesktop {
           background-color: var(--gray-light);
           position: relative;
@@ -55,11 +54,9 @@
                   color: var(--darkgrey-medium);
                 }
               }
-
             }
           }
         }
-
 
         //Mobile
         &--searchInputMobile {
@@ -82,11 +79,9 @@
                 &::placeholder {
                   color: #000;
                 }
-
               }
-
             }
-          }  
+          }
 
           :global(.vtex-store-components-3-x-searchBarIcon) {
             padding: 0;
@@ -96,11 +91,8 @@
           :global(.vtex-search-2-x-biggy-autocomplete) {
             top: 51px;
           }
-
-          
-
         }
- 
+
         &--opened {
           box-shadow: 0 0 0 9999px rgba($color: #000, $alpha: 0.4);
           z-index: 9999999999;
@@ -127,12 +119,11 @@
       .searchIcon {
         width: 1rem;
         height: 1rem;
-        transition: all .2s cubic-bezier(1,-4,0,3);        
+        transition: all 0.2s cubic-bezier(1, -4, 0, 3);
 
         &:hover {
           transform: scale(1.5);
         }
-        
       }
     }
   }
