--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -41,13 +41,13 @@
   &--bottomFooterDesktop {
     background-color: $background-bottom-footer;
     padding: 0 20px 0 40px;
-    .stretchChildrenWidth:nth-child(even){
+    .stretchChildrenWidth:nth-child(even) {
       @include breakpoint('mobile') {
         justify-content: flex-start;
       }
     }
     @media screen and (max-width: 768px) {
-      padding: 0 15px 32px;
+      padding: 0 15px 10px;
     }
   }
 
@@ -77,7 +77,6 @@
   &--footer-upperFooterCol3 {
     align-self: center;
   }
-  
 }
 
 .flexRowContent {
@@ -125,7 +124,7 @@
       }
     }
   }
-  &--footer-PaymentImagesRow  {
+  &--footer-PaymentImagesRow {
     max-width: 532px;
     justify-content: space-between;
 
@@ -138,7 +137,7 @@
       row-gap: 10px;
       .stretchChildrenWidth {
         width: max-content !important;
-       // margin: 1px;
+        // margin: 1px;
       }
       :global(.vtex-store-components-3-x-imageElement) {
         max-width: 58px;
@@ -176,7 +175,7 @@
     }
     @include breakpoint('mobile') {
       justify-content: center;
-      margin: 0
+      margin: 0;
     }
   }
 
@@ -247,7 +246,7 @@
       margin-bottom: 24px;
     }
   }
-  &--footer-upperFooterCol2{
+  &--footer-upperFooterCol2 {
     height: 234px;
     @media screen and (max-width: 768px) {
       height: auto;
@@ -267,7 +266,7 @@
   &--bottomFooter1 {
     @media screen and (max-width: 768px) {
       max-width: 100px;
-      margin-bottom: 32px;
+      margin-bottom: 10px;
     }
   }
 
