--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -21,7 +21,8 @@
     color: $white;
     padding: 10px 15px 10px 0;
     @include breakpoint('mobile') {
-      padding-inline: 0;
+      padding-inline: 2% 2%;
+      text-align: justify;
     }
   }
 
@@ -32,7 +33,6 @@
       padding-top: 20px;
     }
   }
-
 
   &--footer-PaymentMethodsTitle {
     font-size: 20px;
@@ -105,6 +105,7 @@
   }
 
   &--newsSubTitle {
+    justify-content: center !important;
     margin: 0;
     font-size: 16px;
     font-weight: 300;
