--- a/sass/header/vtex.minicart.scss
+++ b/sass/header/vtex.minicart.scss
@@ -19,13 +19,19 @@
     .openIconContainer {
       &::before {
         content: '';
+        position: relative;
+        //top: 5px;
         width: 30px;
         height: 30px;
         display: inline-block;
         align-items: center;
-        background-image: url("data:image/svg+xml,%3Csvg width='22' height='20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform='translate(.578655 1.089016)' stroke='%23332C32' fill='none' fill-rule='evenodd'%3E%3Cellipse cx='16.3514116' cy='16.8317553' rx='1.49148263' ry='1.4906299'/%3E%3Cellipse cx='8.38548112' cy='16.8317553' rx='1.49148263' ry='1.4906299'/%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19.017421 13.6857263H6.08535794L2.79276883 0H0'/%3E%3Cpath stroke-linejoin='round' d='m3.48119653 2.4239903 1.87846194 7.9382178H19.017421l1.8040951-7.9382178z'/%3E%3C/g%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml,%3Csvg width='22' height='20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform='translate(.578655 1.089016)' stroke='%236B4DC4' fill='none' fill-rule='evenodd'%3E%3Cellipse cx='16.3514116' cy='16.8317553' rx='1.49148263' ry='1.4906299'/%3E%3Cellipse cx='8.38548112' cy='16.8317553' rx='1.49148263' ry='1.4906299'/%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19.017421 13.6857263H6.08535794L2.79276883 0H0'/%3E%3Cpath stroke-linejoin='round' d='m3.48119653 2.4239903 1.87846194 7.9382178H19.017421l1.8040951-7.9382178z'/%3E%3C/g%3E%3C/svg%3E");
         background-repeat: no-repeat;
         background-size: 30px 30px;
+        @media screen and (min-width: 768px) and (max-width: 1024px) {
+          top: 10px;
+        }
+
         @include breakpoint('desktop') {
           width: 20px;
           height: 20px;
@@ -44,7 +50,11 @@
         .minicartQuantityBadge {
           background-color: #291660;
           top: -1.3rem;
-          right: -0.6rem;
+          right: -0.4rem;
+          @media screen and (min-width: 768px) and (max-width: 1024px) {
+            top: -0.7rem;
+            right: -0.5rem;
+          }
           @include breakpoint('desktop') {
             top: -0.7rem;
             right: -0.5rem;
@@ -56,8 +66,15 @@
 
       &--minicart-background {
         padding-inline: 0;
-        padding-top: 11px;
-        padding-bottom: 0;
+        // padding-top: 0;
+        // padding-bottom: 0;
+        @include breakpoint('tablet') {
+          padding-top: 10px;
+        }
+        @include breakpoint('desktop') {
+          padding-top: 11px;
+          padding-bottom: 0;
+        }
 
         :global(.vtex-button__label) {
           padding-inline: 0;
@@ -123,9 +140,10 @@
 }
 
 :global(.vtex-store-drawer-0-x-closeIconContainer) {
-  @include breakpoint('mobile') {
+  @media screen and (max-width: 1024px) {
     justify-content: end;
   }
+
   :global(.vtex-store-drawer-0-x-closeIconButton--drawer-desktop) {
     &::before {
       content: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='22px' height='22px' viewBox='0 0 25 26' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3E1AE18E47-FE1D-4628-94D0-DEEC550C1F6A%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='2' fill='none' fill-rule='evenodd' stroke-linecap='round'%3E%3Cg id='M/-1.2-Menu' transform='translate(-320.000000, -19.000000)' stroke='%23332C32'%3E%3Cg id='icon-/-close' transform='translate(320.500000, 20.000000)'%3E%3Cpath d='M0,0 L24,24 M24,0 L0,24' id='close'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
