--- a/sass/product/vtex.add-to-cart-button.scss
+++ b/sass/product/vtex.add-to-cart-button.scss
@@ -2,20 +2,21 @@
 @import '../_variables.scss';
 
 .buttonText--pdp {
-    font-size: 14px;
-    &::after {
-        content: ' al carrello';
-    }
+  font-size: 16px;
+  &::after {
+    content: ' al carrello';
+  }
 }
 
 @include breakpoint('mobile') {
-    .buttonText--pdp::after {
-        content: url('assets/icons/cart-buy-button-icon.svg');
-        padding-left: 14px;
-    }
-    .buttonText--pdp {
-        font-size: 14px;
-        display: flex;
-        align-items: center;
-    }
+  .buttonText--pdp::after {
+    content: url('assets/icons/cart-buy-button-icon.svg');
+    padding-left: 14px;
+  }
+  .buttonText--pdp {
+    font-size: 16px;
+    padding-top: 3px;
+    display: flex;
+    align-items: center;
+  }
 }
